yml/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres

spec:
  serviceName: postgres-service

  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
      - name: postgres

        image: kapilchadockerid/my-postgres-db:1.0

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data             

  volumeClaimTemplates:
  - metadata:
      name: postgres-storage

    spec:
      accessModes:
      - ReadWriteOnce

      resources:
        requests:
          storage: 5Gi
